_code/_promo/_assets/stylesheets/header.scss
header {
  position: relative;
  height: $column * 8;
  padding: $baseline * 5 0;
  background: white url('/_assets/images/individual-home-bg.jpg') no-repeat center 0 scroll;
  border-bottom: 2px solid $darkest-gray;
  overflow: hidden;
  text-align: center; // centers the learn more button
  @media screen and (min-width: $bp-large) {
    background-size: cover;
  }
}

a[role=top-nav] {
  @include position(absolute, 0px $gutter 0 0);
  @include font-size(1.6);
  @media screen and (min-width: $bp) {
    @include position(absolute, 0px 0px 0 0);
  }
}

.bottom-button {
  @include position(absolute, 0 0 ($baseline * 6) 0px);
  width: 100%;
}

.m-logo {
  display: block;
  width: 186px;
  height: 87px;
  margin: 0 0 ($baseline * 4 - 4);
  background: transparent url('/_assets/images/logo@2x.png') no-repeat 0 0;
  background-size: 186px 87px;
  h1 {
    text-indent: -9999px;
  }
  @media screen and (min-width: $bp) {
    margin: 0 0 ($baseline * 4 - 4) -64px;
  }
}

.m-pitch {
  width: 100%;
  color: white;
  text-align: left;
  > h1 {
    @include font-size(3.2);
    margin-bottom: $baseline * 4;
    line-height: 1.3125;
    text-shadow: 2px 2px 2px transparentize($blue, 0.6);
    > .franc-text {
      text-shadow: 2px 2px 2px transparentize(white, 0.6);
    }
  }

  p {
    @include font-size(2);
    margin-bottom: $baseline * 4 - 5;
    line-height: 1.25; // 25px
    text-shadow: 0px 1px 1px $blue;
  }
  @media screen and (min-width: $bp) {
    width: ($column * 5) + ($gutter * 6);
  }
  @media screen and (min-width: $bp-larger) {
    width: ($column * 7) + ($gutter * 9);
  }
}

.for-festivals {
  > header { background-image: url('/_assets/images/festival-home-bg.jpg');}

  .m-pitch {
    @media screen and (min-width: $bp) {
      width: ($column * 6) + ($gutter * 5);
    }
    @media screen and (min-width: $bp-larger) {
    width: ($column * 9);
  }
    > h1 { text-shadow: -2px -2px 4px transparentize(black, 0.5), 2px 2px 2px transparentize(black, 0.5), 0px 0px 32px black;}
    > p { text-shadow: -1px -1px 2px transparentize(black, 0.5), 0px 1px 1px transparentize(black, 0.5), 0px 0px 12px black;}
  }
}

